aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__mov__tests__mov_mem_reg_with_lit.snap
---
source: aya-assembly/src/parser/instructions/mov.rs
expression: result
---
Instruction(
    MovMemReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
        Address(
            BinaryOp {
                lhs: Register(
                    ByteOffset {
                        start: 10,
                        end: 12,
                    },
                ),
                operator: Add,
                rhs: HexLiteral(
                    ByteOffset {
                        start: 16,
                        end: 20,
                    },
                ),
            },
        ),
    ),
)
