aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__mov__tests__mov_reg_mem_expr.snap
---
source: aya-assembly/src/parser/instructions/mov.rs
expression: result
---
Instruction(
    MovRegMem(
        Address(
            BinaryOp {
                lhs: Register(
                    ByteOffset {
                        start: 6,
                        end: 8,
                    },
                ),
                operator: Add,
                rhs: BinaryOp {
                    lhs: Register(
                        ByteOffset {
                            start: 11,
                            end: 13,
                        },
                    ),
                    operator: Add,
                    rhs: Register(
                        ByteOffset {
                            start: 16,
                            end: 18,
                        },
                    ),
                },
            },
        ),
        Register(
            ByteOffset {
                start: 21,
                end: 23,
            },
        ),
    ),
)
