aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__mov__tests__mov_reg_mem_var.snap
---
source: aya-assembly/src/parser/instructions/mov.rs
expression: result
---
Instruction(
    MovRegMem(
        Address(
            Var(
                ByteOffset {
                    start: 7,
                    end: 10,
                },
            ),
        ),
        Register(
            ByteOffset {
                start: 13,
                end: 15,
            },
        ),
    ),
)
