aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__mov__tests__mov_reg_ptr_reg.snap
---
source: aya-assembly/src/parser/instructions/mov.rs
expression: result
---
Instruction(
    MovRegPtrReg(
        Address(
            Register(
                ByteOffset {
                    start: 6,
                    end: 8,
                },
            ),
        ),
        Address(
            Register(
                ByteOffset {
                    start: 13,
                    end: 15,
                },
            ),
        ),
    ),
)
